; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/persistent-data/extr_dm-space-map-common.c_sm_ll_lookup_big_ref_count.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/persistent-data/extr_dm-space-map-common.c_sm_ll_lookup_big_ref_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ll_disk = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ll_disk*, i32, i32*)* @sm_ll_lookup_big_ref_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sm_ll_lookup_big_ref_count(%struct.ll_disk* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ll_disk*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.ll_disk* %0, %struct.ll_disk** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %10 = load %struct.ll_disk*, %struct.ll_disk** %5, align 8
  %11 = getelementptr inbounds %struct.ll_disk, %struct.ll_disk* %10, i32 0, i32 1
  %12 = load %struct.ll_disk*, %struct.ll_disk** %5, align 8
  %13 = getelementptr inbounds %struct.ll_disk, %struct.ll_disk* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @dm_btree_lookup(i32* %11, i32 %14, i32* %6, i32* %8)
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %9, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %3
  %19 = load i32, i32* %9, align 4
  store i32 %19, i32* %4, align 4
  br label %25

20:                                               ; preds = %3
  %21 = load i32, i32* %8, align 4
  %22 = call i32 @le32_to_cpu(i32 %21)
  %23 = load i32*, i32** %7, align 8
  store i32 %22, i32* %23, align 4
  %24 = load i32, i32* %9, align 4
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %20, %18
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @dm_btree_lookup(i32*, i32, i32*, i32*) #1

declare dso_local i32 @le32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
